--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "license": "ISC",
   "dependencies": {
     "axios": "^0.21.1",
+    "capitalize": "^2.0.3",
     "colors": "^1.4.0",
     "dotenv": "^8.2.0",
     "inquirer": "^8.0.0"
